fixed not rendered image

--- a/src/App.css
+++ b/src/App.css
@@ -253,6 +253,9 @@ input:focus {
   color: black;
   text-decoration: none;
 }
+.not-rendered-image{
+  height: 300px;
+}
 
 .underlined{
   text-decoration: underline;
